{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 119,
  "lineage": "37a0f72d-551c-50b3-3c19-e994d7bf73c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:loadbalancer/app/node-backend-lb/0997a994254534ef",
            "arn_suffix": "app/node-backend-lb/0997a994254534ef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "node-backend-lb-1113031611.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:885684264653:loadbalancer/app/node-backend-lb/0997a994254534ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-backend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-039dcde615cd7c63e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b3b740573b6d646"
              },
              {
                "subnet_id": "subnet-06062195ca0f59054"
              }
            ],
            "subnets": [
              "subnet-05b3b740573b6d646",
              "subnet-06062195ca0f59054"
            ],
            "vpc_id": "vpc-06aa63c584d1382dd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:loadbalancer/app/node-frontend-lb/9f393eb047d52b2e",
            "arn_suffix": "app/node-frontend-lb/9f393eb047d52b2e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "node-frontend-lb-959941089.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:885684264653:loadbalancer/app/node-frontend-lb/9f393eb047d52b2e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cc63907a046afd74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b3b740573b6d646"
              },
              {
                "subnet_id": "subnet-06062195ca0f59054"
              }
            ],
            "subnets": [
              "subnet-05b3b740573b6d646",
              "subnet-06062195ca0f59054"
            ],
            "vpc_id": "vpc-06aa63c584d1382dd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:listener/app/node-backend-lb/0997a994254534ef/fa2c6767ab5e789d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:targetgroup/node-backend-targets-group/2e72aa8e96e4d6fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:885684264653:listener/app/node-backend-lb/0997a994254534ef/fa2c6767ab5e789d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:loadbalancer/app/node-backend-lb/0997a994254534ef",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend_lb",
            "aws_lb_target_group.backend_target_group",
            "aws_security_group.backend_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:listener/app/node-frontend-lb/9f393eb047d52b2e/d3568a97b9332247",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:targetgroup/node-frontend-targets-group/55c5c9864be4a905",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:885684264653:listener/app/node-frontend-lb/9f393eb047d52b2e/d3568a97b9332247",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:loadbalancer/app/node-frontend-lb/9f393eb047d52b2e",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend_lb",
            "aws_lb_target_group.frontend_target_group",
            "aws_security_group.frontend_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:targetgroup/node-backend-targets-group/2e72aa8e96e4d6fb",
            "arn_suffix": "targetgroup/node-backend-targets-group/2e72aa8e96e4d6fb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:885684264653:targetgroup/node-backend-targets-group/2e72aa8e96e4d6fb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "node-backend-targets-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:885684264653:targetgroup/node-frontend-targets-group/55c5c9864be4a905",
            "arn_suffix": "targetgroup/node-frontend-targets-group/55c5c9864be4a905",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:885684264653:targetgroup/node-frontend-targets-group/55c5c9864be4a905",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "node-frontend-targets-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:security-group/sg-039dcde615cd7c63e",
            "description": "Security group for node-backend ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039dcde615cd7c63e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allows inbound fron the front end",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "node-backend-sg",
            "name_prefix": "",
            "owner_id": "885684264653",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-backend-sg"
            },
            "tags_all": {
              "Name": "node-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:security-group/sg-0cc63907a046afd74",
            "description": "Security group for node-frontend ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc63907a046afd74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allows connection from the internet",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "node-frontend-sg",
            "name_prefix": "",
            "owner_id": "885684264653",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-frontend-sg"
            },
            "tags_all": {
              "Name": "node-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:network-acl/acl-0da674d915188b087",
            "default_network_acl_id": "acl-0da674d915188b087",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0da674d915188b087",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "885684264653",
            "subnet_ids": [
              "subnet-05b3b740573b6d646",
              "subnet-06062195ca0f59054",
              "subnet-0934731d165ee4689",
              "subnet-0f4ec64abeccaa17d"
            ],
            "tags": {
              "Name": "Challenge-node-app-default",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app-default",
              "Project": "Challenge-node-app"
            },
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:route-table/rtb-0273282b24cc8b8ca",
            "default_route_table_id": "rtb-0273282b24cc8b8ca",
            "id": "rtb-0273282b24cc8b8ca",
            "owner_id": "885684264653",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Challenge-node-app-default",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app-default",
              "Project": "Challenge-node-app"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:security-group/sg-0519a5a2cf3f42924",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0519a5a2cf3f42924",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "885684264653",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Challenge-node-app-default",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app-default",
              "Project": "Challenge-node-app"
            },
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fef87cc02894a6e",
            "arn": "arn:aws:ec2:us-east-2:885684264653:elastic-ip/eipalloc-02fef87cc02894a6e",
            "domain": "vpc",
            "id": "eipalloc-02fef87cc02894a6e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-143-106-93.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.106.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Challenge-node-app-us-east-2a",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app-us-east-2a",
              "Project": "Challenge-node-app"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:internet-gateway/igw-00bbb47496edbdd4d",
            "id": "igw-00bbb47496edbdd4d",
            "owner_id": "885684264653",
            "tags": {
              "Name": "Challenge-node-app",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app",
              "Project": "Challenge-node-app"
            },
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fef87cc02894a6e",
            "association_id": "eipassoc-0cc61caebc6a109b3",
            "connectivity_type": "public",
            "id": "nat-012aad5e93bc3c8e7",
            "network_interface_id": "eni-03157eafd29b2511f",
            "private_ip": "10.10.45.66",
            "public_ip": "3.143.106.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06062195ca0f59054",
            "tags": {
              "Name": "Challenge-node-app-us-east-2a",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app-us-east-2a",
              "Project": "Challenge-node-app"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08c58a24bf9a02f081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-012aad5e93bc3c8e7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c58a24bf9a02f08",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00bbb47496edbdd4d",
            "id": "r-rtb-067861fc9cc2ccb361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-067861fc9cc2ccb36",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:route-table/rtb-08c58a24bf9a02f08",
            "id": "rtb-08c58a24bf9a02f08",
            "owner_id": "885684264653",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Challenge-node-app-private",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app-private",
              "Project": "Challenge-node-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:route-table/rtb-067861fc9cc2ccb36",
            "id": "rtb-067861fc9cc2ccb36",
            "owner_id": "885684264653",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Challenge-node-app-public",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app-public",
              "Project": "Challenge-node-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e7193bb9a0835e",
            "route_table_id": "rtb-08c58a24bf9a02f08",
            "subnet_id": "subnet-0934731d165ee4689"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f0646aa0ee4b0f3",
            "route_table_id": "rtb-08c58a24bf9a02f08",
            "subnet_id": "subnet-0f4ec64abeccaa17d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042f1187de36c471b",
            "route_table_id": "rtb-067861fc9cc2ccb36",
            "subnet_id": "subnet-06062195ca0f59054"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e955cc1b0bea059",
            "route_table_id": "rtb-067861fc9cc2ccb36",
            "subnet_id": "subnet-05b3b740573b6d646"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:subnet/subnet-0934731d165ee4689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0934731d165ee4689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885684264653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Challenge-node-app-private-us-east-2a",
              "Project": "Challenge-node-app",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "Challenge-node-app-private-us-east-2a",
              "Project": "Challenge-node-app",
              "Tier": "Private"
            },
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:subnet/subnet-0f4ec64abeccaa17d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4ec64abeccaa17d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885684264653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Challenge-node-app-private-us-east-2b",
              "Project": "Challenge-node-app",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "Challenge-node-app-private-us-east-2b",
              "Project": "Challenge-node-app",
              "Tier": "Private"
            },
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:subnet/subnet-06062195ca0f59054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06062195ca0f59054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885684264653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Challenge-node-app-public-us-east-2a",
              "Project": "Challenge-node-app",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "Challenge-node-app-public-us-east-2a",
              "Project": "Challenge-node-app",
              "Tier": "Public"
            },
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:subnet/subnet-05b3b740573b6d646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b3b740573b6d646",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885684264653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Challenge-node-app-public-us-east-2b",
              "Project": "Challenge-node-app",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "Challenge-node-app-public-us-east-2b",
              "Project": "Challenge-node-app",
              "Tier": "Public"
            },
            "vpc_id": "vpc-06aa63c584d1382dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885684264653:vpc/vpc-06aa63c584d1382dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0da674d915188b087",
            "default_route_table_id": "rtb-0273282b24cc8b8ca",
            "default_security_group_id": "sg-0519a5a2cf3f42924",
            "dhcp_options_id": "dopt-03eb441518e083d8c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06aa63c584d1382dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0273282b24cc8b8ca",
            "owner_id": "885684264653",
            "tags": {
              "Name": "Challenge-node-app",
              "Project": "Challenge-node-app"
            },
            "tags_all": {
              "Name": "Challenge-node-app",
              "Project": "Challenge-node-app"
            }
          }
        }
      ]
    }
  ]
}